fixing index.html / responsive pics

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navco mb-5 bg-light">
-    <a class="navbar-brand" style="background-color:#4AAAA5; color: white" href="#">Ben Robinson</a>
+    <a class="navbar-brand" style="background-color:#4AAAA5; color: white" href="https://www.linkedin.com/feed/">Ben Robinson</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\portfolio.html">Portfolio</a>
+          <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\index.html">Portfolio</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\contact.html">Contact <span class="sr-only">(current)</span></a>
@@ -64,7 +64,7 @@
 
   <footer id="footer" class="py-4 bg-dark text-white-50 mt-1">
     <div class="container text-center">
-      <small>Copyright &copy; Your Website</small>
+      <small>Copyright &copy; <a href="https://www.linkedin.com/feed/">Linkedin Page</small></a>
     </div>  
   </footer>
 
