--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light navco mb-5 bg-light">
-        <a class="navbar-brand" style="background-color: #4AAAA5; color: white" href="#">Ben Robinson</a>
+        <a class="navbar-brand" style="background-color: #4AAAA5; color: white" href="https://www.linkedin.com/feed/">Ben Robinson</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,24 +42,24 @@
                 </div>      
               </div>
               <div class="row">
-                  <div class="col-md-4">
-                      <img src="https://via.placeholder.com/350">
+                  <div class="col-md-4 mt-3">
+                      <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
                   </div>
-                  <div class="col-md-4 ml-5">
-                    <img src="https://via.placeholder.com/350">
+                  <div class="col-md-4 mt-3">
+                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-4 mt-3">
-                    <img src="https://via.placeholder.com/350">
+                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
                 </div>
-                <div class="col-md-4 mt-3 ml-5">
-                    <img src="https://via.placeholder.com/350">
+                <div class="col-md-4 mt-3">
+                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mt-3 mb-3">
-                    <img src="https://via.placeholder.com/350">
+                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
                 </div>
             </div>
           </div>
@@ -72,7 +72,7 @@
 
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50 mt-1">
         <div class="container text-center">
-          <small>Copyright &copy; Your Website</small>
+          <small>Copyright &copy; <a href="https://www.linkedin.com/feed/">Linkedin Page</small></a>
         </div>      
       </footer>
       
