fixing nav links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\index.html">Portfolio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\contact.html">Contact</a>
@@ -43,23 +43,23 @@
               </div>
               <div class="row">
                   <div class="col-md-4 mt-3">
-                      <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
+                      <img class="img-fluid" src="http://placehold.jp/350x350.png">
                   </div>
                   <div class="col-md-4 mt-3">
-                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
+                    <img class="img-fluid" src="http://placehold.jp/350x350.png">
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-4 mt-3">
-                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
+                    <img class="img-fluid" src="http://placehold.jp/350x350.png">
                 </div>
                 <div class="col-md-4 mt-3">
-                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
+                    <img class="img-fluid" src="http://placehold.jp/350x350.png">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mt-3 mb-3">
-                    <img class="img-fluid" src="IMG_0880.jpeg" alt="ollie" style="width:350px;height:350px;">
+                    <img class="img-fluid" src="http://placehold.jp/350x350.png">
                 </div>
             </div>
           </div>
