--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\index.html">Portfolio <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Portfolio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\contact.html">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>            
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\robin\developer\boot-camp\homework\Portfolio\about_me.html">About</a>
+              <a class="nav-link" href="about_me.html">About</a>
             </li>            
           </ul>          
         </div>
