--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
               <a class="nav-link" href="contact.html">Contact</a>
             </li>            
             <li class="nav-item active">
-              <a class="nav-link" href="about_me.html">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
             </li>            
           </ul>          
         </div>
