--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="contact.html">Contact <span class="sr-only">(current)</span></a>
         </li>            
         <li class="nav-item">
-          <a class="nav-link" href="about_me.html">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>            
       </ul>          
     </div>
