--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navco mb-5 bg-light">
-    <a class="navbar-brand" style="background-color:#4AAAA5; color: white" href="https://www.linkedin.com/feed/">Ben Robinson</a>
+    <a class="navbar-brand" style="background-color:#4AAAA5; color: white" href="https://www.linkedin.com/feed/">Ben Robinson <br> robinson.dri@gmail.com <br> ph# 206-498-2833</a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,7 +44,7 @@
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name">
           </div>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email</label>
@@ -71,5 +72,8 @@
  </div>
    </div>
 
+   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
