--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light navco mb-5 bg-light">
+    <nav class="navbar navbar-expand-lg navco mb-5">
         <a class="navbar-brand" style="color: black; font-weight: 900" href="https://www.linkedin.com/feed/">Ben Robinson <small>Jr. Webdeveloper</small></a>        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -81,6 +81,13 @@
                 </div>
                 <div class="col-md-4 mt-3">
                   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="ben-robinson-815a41171"><a class="LI-simple-link" href='https://www.linkedin.com/in/ben-robinson-815a41171?trk=profile-badge'>Ben Robinson</a></div>
+                  <img class="mt-3" src="GitHub-Mark-120px-plus.png">
+                  <div class="floatR">
+                    
+                    <a href="https://drive.google.com/file/d/1r-Y1YEztjMERsta48by2aEfpQADcpTWP/view?usp=sharing" download>
+                    <img src="ResumeDownload.png" height="100px" width="100px">
+                    </a>
+                  </div>
                 </div>
             </div>
             <!-- <div class="row">
@@ -108,5 +115,6 @@
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 </body>
 </html>
