--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light navco mb-5 bg-light">
-    <a class="navbar-brand" style="background-color:#4AAAA5; color: white" href="https://www.linkedin.com/feed/">Ben Robinson <br> robinson.dri@gmail.com <br> ph# 206-498-2833</a>
+  <nav class="navbar navbar-expand-lg navco mb-5">
+    <p>robinson.dri@gmail.com <br> PH# 206-498-2833</p>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -32,15 +32,15 @@
   </nav>
 
 
-  <main class="container" style="background-color: #EBEBEB">
+  <main class="container">
     <div class="row">
-      <div class="col-md-8 mt-5 bg-light">
-        <h1 style="color: #4AAAA5">Contact</h1>
+      <div class="col-md-8 mt-5 ml-5 bg-light">
+        <h1 style="color: #bb8e07da; font-weight: 900">Contact</h1>
         <hr/>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8 bg-light">
+      <div class="col-md-8 ml-5 bg-light" style="border-style: inset">
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Name</label>
@@ -54,7 +54,7 @@
             <label for="exampleFormControlTextarea1">Message</label>
             <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary ml-2 mb-5" style="background-color: #4AAAA5">Submit</button>
+          <button type="submit" class="btn border border-dark ml-2 mb-5" style="background-color: #bb8e07da">Submit</button>
         </form>
       </div>      
     </div>
@@ -65,7 +65,7 @@
 
   <footer id="footer" class="py-4 bg-dark text-white-50 mt-1">
     <div class="container text-center">
-      <small>Copyright &copy; <a href="https://www.linkedin.com/feed/">Linkedin Page</small></a>
+      <small>Copyright &copy; <a href="www.linkedin.com/in/benrobinsonwebdev">Linkedin Page</small></a>
     </div>  
   </footer>
 
