--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       <img class="img-fluid" src="Hike Local ScreenShot.PNG" alt="Hike ScreenShot" height="350" width="350">
                     </a>
                     <small><a href="https://github.com/snelson-seattle/HikeLocal/tree/develop">GitHub Repo</small></a>
-                    <p class="hikeP">Hike Local is a web site that locates hiking trails based on a users location and desired difficulty.  I worked with a team to create this site and mostly focused on the front end development.  This app uses API calls from three diffrent sources to display the trail information the user desires. </p>
+                    <p class="hikeP"> Hike Local is a website that locates hiking trails based on a user's location and desired difficulty.  I worked with a team to create this site and mostly focused on the front end development.  This app uses API calls from three different sources to display the trail information the user desires. </p>
                   </div>
                   <div style="background: rgb(106, 170, 10);
                   background: linear-gradient(90deg, rgba(194, 168, 18, 0.337) 0%, rgba(3,38,5,0.2861519607843137) 50%, rgba(7, 7, 1, 0.317) 100%);
@@ -72,7 +72,9 @@
                     <img class="img-fluid" src="Weather Dashboard ScreenShot.PNG" alt="Dashboard screenShot" height="350" width="350">
                   </a>
                   <small><a href="https://github.com/Tarbo13/Weather_Dashboard">GitHub Repo</small></a>
-                  <p class="hikeP">This web site is able to take in a users city and display the current weather and a future five day forcast.  I had to use three seperate API calls here to generate the current weather, five day forcase, and uv information for the page. </p>
+                  <p class="hikeP"> 
+                    This web site is able to take in a user's city and display the current weather and a future five day forecast.  I had to use three separate API calls here to generate the current weather, five day forecast, and uv information for the page.
+                     </p>
                 </div>
                 
                 <div class="col-md-4 mt-3">
