--- a/about.html
+++ b/about.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Monoton&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="about_me.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Overlock&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/about_me.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navco mb-5"> 
       <p class="emailP">robinson.dri@gmail.com <br> PH# 206-498-2833</p>      
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon">=</span>
         </button>
         
       
@@ -42,7 +43,7 @@
           <div class="row">
               <div class="col-md-8 mb-5 ml-5 bg-light">
                  <div class="float-left">
-                  <img src="IMG_1527.jpg" alt="head shot" style="width:175px;height:180px;" class="mr-2">
+                  <img src="./assets/IMG_1527.jpg" alt="head shot" style="width:175px;height:180px;" class="mr-2">
                    </div>
                   <p class="aboutP">   Hi there, I'm Ben Robinson and I was born and raised in Salem Oregon.  Growing up I spent a lot of time in the state parks.  My family was big into camping, waterskiing, and hiking.  When I hit my highschool years I became very active in our school music program.  I play percussion.  My passion for drums followed me all the way through college where I played for several school jazz quiors and bands.  After college I moved to Seattle Washington where my love for drumming followed me.  I play in several groups, including a rock band and a church gospel choir.  I've lived in Seattle for the past eighteen years and have worked in project management for several logistics companies.  While in this profession I have learned how to use EDI systems that manage communication between our customers and their customers.  Recently I completed the UW full stack coding boot camp.  I have learned some of the fundamentals and I'm looking forward to putting my new skills to use.  During the course I learned to code using HTML, CSS JavaScript, JQuery, Node.js MongoDB, Angular.js and React. I have posted some of my current projects here.  Please take a look.  Deployed web pages and links to my GitHub repo pages are in the portfolio tab above. </p>
                    </div>
