--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
   <title>Contact</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Monoton&family=Staatliches&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="./assets/contact.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navco mb-5">
     <p class="emailP">robinson.dri@gmail.com <br> PH# 206-498-2833</p>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon">=</span>
     </button>
     
   
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-8 ml-5 bg-light">
+      <div class="col-md-8 ml-5 mb-5 bg-light">
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Name</label>
