adding burger app

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
                     This web site is able to take in a user's city and display the current weather and a future five day forecast.  I had to use three separate API calls here to generate the current weather, five day forecast, and uv information for the page.
                      </p>
                 </div>
+
+                <div class="row">
+                  <div style="background: rgb(106, 170, 10);
+                  background: linear-gradient(90deg, rgba(194, 168, 18, 0.337) 0%, rgba(3,38,5,0.2861519607843137) 50%, rgba(7, 7, 1, 0.317) 100%); border-style: groove;" class="col-md-4 mb-3 ml-3 mt-3">
+                    <h1 class="hikeH">Eat Da Burger</h1>
+                    <a href="https://thawing-dusk-33345.herokuapp.com/">
+                      <img class="img-fluid" src="assets\burger screen shot.PNG" alt="Burger screenshot" height="350" width="350">
+                    </a>
+                    <small><a href="https://github.com/Tarbo13/burger">GitHub Repo</small></a>
+                    <p class="hikeP"> 
+                      This is a simple full stack web application that stores and deletes data using a mysql database. 
+                       </p>
+                  </div>
                 
                 <div class="col-md-4 mt-3">
                   <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="ben-robinson-815a41171"><a class="LI-simple-link" href='https://www.linkedin.com/in/ben-robinson-815a41171?trk=profile-badge'>Ben Robinson</a></div>
