--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
   <main class="container">
     <div class="row">
-      <div class="col-md-8 mt-5 ml-5 bg-light">
+      <div class="cardShadow col-md-8 mt-5 ml-5 bg-light">
         <h1 style="color: #bb8e07da; font-weight: 900">Contact</h1>
         <hr/>
       </div>
@@ -55,7 +55,7 @@
             <label for="exampleFormControlTextarea1">Message</label>
             <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn border border-dark ml-2 mb-5" style="background-color: #bb8e07da">Submit</button>
+          <button type="submit" class="cardShadow btn border border-dark ml-2 mb-5" style="background-color: #bb8e07da">Submit</button>
         </form>
       </div>      
     </div>
